--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,12 @@ License:
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-LinkingTo: 
+LinkingTo:
     Rcpp, 
     RcppArmadillo
+Imports:
+    Rcpp,
+    stats,
+    GIGrvg,
+    tmvnsim,
+    TruncatedNormal
