--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,14 @@ Imports:
     stats,
     GIGrvg,
     tmvnsim,
-    TruncatedNormal
+    TruncatedNormal,
+    tmvnorm,
+    actuar
 Depends: 
     R (>= 2.10)
 LazyData: true
+Suggests: 
+    knitr,
+    rmarkdown,
+    ggplot2
+VignetteBuilder: knitr
